[package]
name = "heartbeat-api"
version = "0.1.0"
edition = "2024"

[dependencies]
heartbeat-core = { path = "../heartbeat-core" }
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
axum = "0.8"
chrono.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing.workspace = true
tracing-subscriber.workspace = true
