[package]
name = "heartbeat-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
heartbeat-core = { path = "../heartbeat-core" }
aws-config.workspace = true
aws-sdk-ssm.workspace = true
chrono.workspace = true
humantime.workspace = true
lambda_runtime = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
