[package]
name = "heartbeat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_dynamo.workspace = true
humantime.workspace = true
thiserror.workspace = true
tracing.workspace = true
